base64 替换 被去掉的类